--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           host: ${{secrets.SSH_HOST}}
           key: ${{secrets.SSH_KEY}}
-          username: ${{secrets.SSH_USERNAME}
+          username: ${{secrets.SSH_USERNAME}}
           script: |
             mkdir /var/www/vhosts/test
             git pull https://github.com/VijayKadiyam/test-droplet.git
