--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,7 @@ jobs:
             mkdir /var/www/vhosts/test
             git pull https://github.com/VijayKadiyam/test-droplet.git
             echo 'Deployment Done'
+            echo ${{secrets.SSH_HOST}}
         
       
           
