--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Deploy App
         uses: appleboy/ssh-action@master
         with:
-          host: 64.227.135.20
+          host: "64.227.135.20"
           key: ${{secrets.SSH_KEY}}
           username: root
           script: |
