--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           username: ${{ secrets.SSH_USERNAME }}
           script: |
-            mkdir /var/www/vhosts/test
+            cd /var/www/vhosts/test
             git pull https://github.com/VijayKadiyam/test-droplet.git
             echo 'Deployment Done'
             echo ${{secrets.SSH_HOST}}
