--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
           script: |
             cd /var/www/vhosts/test
             git pull https://github.com/VijayKadiyam/test-droplet.git
-            echo 'Deployment Done"
+            echo 'Deployment Done'
         
       
           
