--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           script: |
             cd /var/www/vhosts/test
-            git pull https://github.com/VijayKadiyam/test-droplet.git
+            git clone https://github.com/VijayKadiyam/test-droplet.git
             echo 'Deployment Done'
         
       
