--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,11 +13,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Run a one-line script
-        run: echo Hello, world!
-        
       - name: Deploy App
         uses: appleboy/ssh-action@master
         with:
@@ -28,6 +23,16 @@ jobs:
             cd /var/www/vhosts/test
             git pull https://github.com/VijayKadiyam/test-droplet.git
             echo 'Deployment Done'
+            
+      - name: Post Deployment
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          key: ${{ secrets.SSH_KEY }}
+          username: ${{ secrets.SSH_USERNAME }}
+          script: |
+            cd /var/www/vhosts/test
+            echo 'Post Deployment'
         
       
           
